// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`volume set overrides should report the overridden path beside the verdict, and nothing as unreachable 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "archive",
    "verify",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "checked": 2,
    "collisions": [],
    "findings": [],
    "overrides": [
      {
        "container": "<sandbox>/db/patch.db",
        "hidden": [
          "<sandbox>/db/base.db",
        ],
        "logicalPath": "textures\\wpn\\wpn_ak74.dds",
      },
    ],
    "status": "passed",
  },
}
`;

exports[`volume set overrides should report the same buried copy from the listing 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "gamedata",
    "list",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "collisions": [],
    "duration": "<duration>",
    "entries": [
      {
        "container": "<sandbox>/db/patch.db",
        "isArchived": true,
        "logicalPath": "textures\\wpn\\wpn_ak74.dds",
      },
    ],
    "isShadowedIncluded": true,
    "mounts": [
      "Archive   <sandbox>/db (db)",
    ],
    "origin": "<sandbox>/db",
    "shadowed": [
      {
        "container": "<sandbox>/db/base.db",
        "isArchived": true,
        "logicalPath": "textures\\wpn\\wpn_ak74.dds",
      },
    ],
    "skipped": [],
    "total": 1,
  },
}
`;

exports[`volume set overrides should verify clean and still name what the patch buried 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "1 path(s) are held more than once, burying 1 cop(ies):",
    "  'textures\\wpn\\wpn_ak74.dds' answers from <sandbox>/db/patch.db (archive), hiding 1 cop(ies)",
    "Verified 2 file(s) in <duration>",
  ],
}
`;

exports[`volume set overrides should write the expected files 1`] = `
[
  {
    "path": "base/textures/wpn/wpn_ak74.dds",
    "sha256": "456a250f8b263cb6d99cebbe5bea43b2b04f3ec7e41ce33657ae18aa31d0bc49",
    "size": 12,
  },
  {
    "path": "db/base.db",
    "sha256": "4b38062f440701c3cae5ee42347284746139734080bb727bd48012168771e2f8",
    "size": 157,
  },
  {
    "path": "db/patch.db",
    "sha256": "b57450d000118d97dab0f4d9e41dadf6088f981046be61828bc12e409a9d6ea6",
    "size": 162,
  },
  {
    "path": "listing.json",
    "sha256": "91148bf79a51cf651d12c526b2c936b0de43f1c00194a7e92946be2a045287c8",
    "size": 1067,
  },
  {
    "path": "patch/Textures/Wpn/WPN_AK74.DDS",
    "sha256": "f3e0f673b0cc4f6c0c3e4103514975f3ebf8830f9ac58532d682f6c92edec1bd",
    "size": 15,
  },
  {
    "path": "verify.json",
    "sha256": "330b4142809284370c72a26d30f63c75ad7d8a0036a4867fa23ff0cc7b1f210a",
    "size": 815,
  },
]
`;
